--- a/index.html
+++ b/index.html
@@ -10,22 +10,19 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="viewport" content="initial-scale = 1.0, user-scalable = no">
 		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<link rel="stylesheet" type="text/css" href="staticcss.css">
+		<link rel="stylesheet" type="text/css" href="sofiacss.css">
 	</head>
 	<body>
-		
-		<div class="container">
-			<div style="text-align: center; position: absolute; top: 200px; left: 40px; bottom: 40px; right: 40px;">
-				<p>Hi, hello, how are you!</p>
-				<p>I'm Sofia Cavallo</p>
-				<p>I do e-commerce management and digital marketing for fashion brands.</p>
-				<p>I've worked at <a href="https://www.openingceremony.com/">Opening Ceremony</a>, <a href="http://www.vfiles.com/">VFILES</a>, and <a href="http://www.vogue.com/">Vogue</a>.</p>
-				<p>Let's be a team.</p>
-				<p><script type="text/javascript">
-               		document.write("<a href=\"mail" + "to:" + new Array("sofia","sofiacavallo.com").join("@") + "\">" + new Array("sofia at sofiacavallo dot com") + "</" + "a>");
-            		</script>
-            	</p>
-			</div>
-		
+		<div class="textcontainer">
+			<p>Hi, hello, how are you!</p>
+			<p>I'm Sofia Cavallo</p>
+			<p>I do e-commerce management and digital marketing for fashion brands.</p>
+			<p>I've worked at <a href="https://www.openingceremony.com/">Opening Ceremony</a>, <a href="http://www.vfiles.com/">VFILES</a>, and <a href="http://www.vogue.com/">Vogue</a>.</p>
+			<p>Let's be a team.</p>
+			<p><script type="text/javascript">
+	       		document.write("<a href=\"mail" + "to:" + new Array("sofia","sofiacavallo.com").join("@") + "\">" + new Array("sofia at sofiacavallo dot com") + "</" + "a>");
+	    		</script>
+	    	</p>
+		</div>
 	</body>
 </html>
