--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<body>
 		<div class="textcontainer">
 			<p>Hi, hello, how are you!</p>
-			<p>I'm Sofia Cavallo</p>
+			<p>I'm Sofia Cavallo.</p>
 			<p>I do e-commerce management and digital marketing for fashion brands.</p>
 			<p>I've worked at <a href="https://www.openingceremony.com/">Opening Ceremony</a>, <a href="http://www.vfiles.com/">VFILES</a>, and <a href="http://www.vogue.com/">Vogue</a>.</p>
 			<p>Let's be a team.</p>
