Added NYC to copy

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Sofia Cavallo</title>
 		<meta name="ROBOTS" content="INDEX,FOLLOW">
 		<meta name="description" content="Hi, hello, how are you!">
-		<meta name="keywords" content="Sofia Cavallo does e-commerce management and digital marketing for fashion brands">
+		<meta name="keywords" content="Sofia Cavallo does e-commerce management and digital marketing for fashion brands,<br> and I'm based in New York.">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
