--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="textcontainer">
 			<p>Hi, hello, how are you!</p>
 			<p>I'm Sofia Cavallo.</p>
-			<p>I do e-commerce management and digital marketing for fashion brands,<br>, and I'm based in New York.</p>
+			<p>I do e-commerce management and digital marketing for fashion brands,<br>and I'm based in New York.</p>
 			<p>I've worked at <a href="https://www.openingceremony.com/">Opening Ceremony</a>, <a href="http://www.vfiles.com/">VFILES</a>, and <a href="http://www.vogue.com/">Vogue</a>.</p>
 			<p>Let's be a team.</p>
 			<p><script type="text/javascript">
